--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Gabriel Reina | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Gabriel Reina | WDD 130</h1>
+        <img src="images/profile.webp" alt="Gabriel Reina" width="200">
+        <p>I'm Gabriel and I live in Montevideo, Uruguay with my wife who I married in february
+            2025. I love music of all genres especially rock, pop and jazz. I play the piano, the
+            guitar and
+            sing.</p>
+    </main>
+    <footer>
+        <p>©2026 | Gabriel Reina | Montevideo</p>
+    </footer>
 </body>
+
 </html>
