Basic HTML Structure

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Gabriel Reina">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Layout Logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.thebeatles.com/">The Beatles</a></li>
+            <li><a href="https://www.auf.org.uy/">AUF</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+    </main>
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/arequipa-peru/800x500/1-55f6c59ce8f9c093a9c689067f8674335de544e2.jpeg"
+          alt="Temple" width="200">
+    </aside>
+    <footer>
+        <p>Gabriel Reina</p>
+    </footer>
 </body>
+
 </html>
