home page enhancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Reina | WDD 130</title>
+    <meta name="description" content="Gabriel Reina, WDD130, Web Fundamentals, Home Page.">
+    <meta name="author" content="Gabriel Reina">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -23,6 +25,13 @@
             guitar and
             sing.</p>
     </main>
+    <aside>
+        <h2>Montevideo, Uruguay</h2>
+        <img src="images/montevideo.webp" alt="Montevideo, Uruguay">
+        <p>Known for its relaxed pace of life, Montevideo blends historic architecture, leafy
+            neighborhoods, and a long coastal promenade called the Rambla,
+            which stretches for kilometers along the waterfront.</p>
+    </aside>
     <footer>
         <p>©2026 | Gabriel Reina | Montevideo</p>
     </footer>
