code along week 03

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href=https://www.instagram.com/gabrireina2>Instagram</a>
+            <a href=https://www.linkedin.com/in/gabrielreinamontaldo>Linkedin</a>
         </nav>
     </header>
     <main>
@@ -23,7 +25,27 @@
         <p>I'm Gabriel and I live in Montevideo, Uruguay with my wife who I married in february
             2025. I love music of all genres especially rock, pop and jazz. I play the piano, the
             guitar and
-            sing.</p>
+            sing. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius dolor alias autem
+            dolore exercitationem ducimus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Quam magnam assumenda ab repellat dicta quasi adipisci autem esse. Autem iusto, odit
+            voluptas voluptatem odio harum provident laudantium facere dolorum. Asperiores. Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Odit atque harum explicabo commodi
+            repellat iure! Officia magnam incidunt necessitatibus molestias, culpa dignissimos
+            temporibus repudiandae corrupti illum, consequuntur voluptate quod reiciendis, beatae
+            fugiat? Voluptate itaque, minus obcaecati mollitia ullam modi ducimus placeat illo
+            eaque? Veritatis velit eveniet ipsam labore minima veniam aspernatur dolore perspiciatis
+            harum commodi facilis quas, praesentium eum fuga!</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/imgs/7dqbfpkm3mnualv3l4oiqk913qdq5460xrd98epx/full/500%2C/0/default"
+                  target="_blank">Montevideo Uruguay Temple</a>
+            </li>
+            <li><a href="https://www.churchofjesuschrist.org/imgs/95f3f3abdd4811ed920ceeeeac1e15db91037802/full/500%2C/0/default"
+                  target="_blank">Brasilia Brazil Temple</a>
+            </li>
+            <li><a href="https://www.churchofjesuschrist.org/imgs/e97d43cdfab131f3ffac633cd7c952de861d51c8/full/500%2C/0/default"
+                  target="_blank">Provo City Center Temple</a>
+            </li>
+        </ul>
     </main>
     <aside>
         <h2>Montevideo, Uruguay</h2>
