week 03 activty corrections added

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Website</title>
+    <title>About Us Exciting Expeditions Ltd</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <meta name="description" content="WDD130, Web Fundamentals, Gabriel Reina, Rafting Website">
     <meta name="author" content="Gabriel Reina">
