--- a/week04/flexbox-menu.html
+++ b/week04/flexbox-menu.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Flexbox - Navigation Menu</title>
     <link rel="stylesheet" href="styles/flexbox-menu.css">
 </head>
+
 <body>
     <main>
         <h1>CSS Flexbox Navigation Menu Example</h1>
@@ -18,12 +20,17 @@
                 <li><a href="#">Menu Item 5</a></li>
             </ul>
         </nav>
-        <p>The preferred view to test the outcomes of using CSS Flex on the unordered list is to display the rendered output in various screen sizes which you can emulate using the browsers DevTools.</p>
+        <p>The preferred view to test the outcomes of using CSS Flex on the unordered list is to
+            display the rendered output in various screen sizes which you can emulate using the
+            browsers DevTools.</p>
 
-        <p>Press F12 or Ctrl+Shift+I (Windows/Linux) or Cmd+Option+I (Mac) to open DevTools or right-click on the page and select "Inspect". Once DevTools is open, you can click the device toolbar icon (phone/tablet icon) or press Ctrl+Shift+M to toggle responsive design mode.</p>
+        <p>Press F12 or Ctrl+Shift+I (Windows/Linux) or Cmd+Option+I (Mac) to open DevTools or
+            right-click on the page and select "Inspect". Once DevTools is open, you can click the
+            device toolbar icon (phone/tablet icon) or press Ctrl+Shift+M to toggle responsive
+            design mode.</p>
 
-                      
-        
+
     </main>
 </body>
+
 </html>
