--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="images/rafting_site_logo.jpg" alt="Exciting Expeditions Logo" width="150">
+        <img src="images/rafting_site_logo.jpg" alt="Exciting Expeditions Logo" width="250">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero_image.webp" alt="Hero image" width="1000">
+            <img class="logo" src="images/hero_image.webp" alt="Hero image" width="1000">
             <h1>Exciting Expeditions</h1>
             <article>
                 <img src="images/happy_client.webp" alt="Happy client" width="200">
@@ -41,12 +41,45 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet ex tempora illum
-                consequuntur, eum velit sit doloremque eos odio itaque, sapiente voluptatem dolore!
-                Necessitatibus porro suscipit tempora consequuntur, minima reprehenderit.</p>
+            <div class="history">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda doloremque
+                    error sit iste, est fugit obcaecati laborum id minus officiis earum omnis,
+                    officia ad ipsa perferendis? Rerum, iusto? Deserunt possimus hic, illo aperiam
+                    inventore corporis.</p>
+                <img src="images/history_image.webp" alt="History image" width="250">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quasi unde saepe
+                    aliquid necessitatibus ducimus, blanditiis optio molestiae, porro obcaecati
+                    laudantium deleniti illum repellendus vel? Expedita doloremque nulla vitae dolor
+                    enim hic ipsa et modi.</p>
+            </div>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="adventures">
+                <figure>
+                    <img src="images/1_rafting_rio_mendoza.webp" alt="Rafting Rio Mendoza"
+                      width="200">
+                    <figcaption>Rafting Rio Mendoza</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/2_rafting_jalcomulco.webp" alt="Rafting Jalcomulco"
+                      width="200">
+                    <figcaption>Rafting Jalcomulco</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/3_rafting_cusipata.webp" alt="Rafting Cusipata" width="200">
+                    <figcaption>Rafting Cusipata</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/4_rafting_rio_pacuare.webp" alt="Rafting Rio Pacuare"
+                      width="200">
+                    <figcaption>Rafting Rio Pacuare</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/5_rafting_rio_atuel.webp" alt="Rafting Rio Atuel" width="200">
+                    <figcaption>Rafting Rio Atuel</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
