week 04 activity correction

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,33 +53,28 @@
                     enim hic ipsa et modi.</p>
             </div>
         </section>
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <div class="adventures">
-                <figure>
-                    <img src="images/1_rafting_rio_mendoza.webp" alt="Rafting Rio Mendoza"
-                      width="200">
-                    <figcaption>Rafting Rio Mendoza</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/2_rafting_jalcomulco.webp" alt="Rafting Jalcomulco"
-                      width="200">
-                    <figcaption>Rafting Jalcomulco</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/3_rafting_cusipata.webp" alt="Rafting Cusipata" width="200">
-                    <figcaption>Rafting Cusipata</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/4_rafting_rio_pacuare.webp" alt="Rafting Rio Pacuare"
-                      width="200">
-                    <figcaption>Rafting Rio Pacuare</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/5_rafting_rio_atuel.webp" alt="Rafting Rio Atuel" width="200">
-                    <figcaption>Rafting Rio Atuel</figcaption>
-                </figure>
-            </div>
+            <figure>
+                <img src="images/1_rafting_rio_mendoza.webp" alt="Rafting Rio Mendoza" width="200">
+                <figcaption>Rafting Rio Mendoza</figcaption>
+            </figure>
+            <figure>
+                <img src="images/2_rafting_jalcomulco.webp" alt="Rafting Jalcomulco" width="200">
+                <figcaption>Rafting Jalcomulco</figcaption>
+            </figure>
+            <figure>
+                <img src="images/3_rafting_cusipata.webp" alt="Rafting Cusipata" width="200">
+                <figcaption>Rafting Cusipata</figcaption>
+            </figure>
+            <figure>
+                <img src="images/4_rafting_rio_pacuare.webp" alt="Rafting Rio Pacuare" width="200">
+                <figcaption>Rafting Rio Pacuare</figcaption>
+            </figure>
+            <figure>
+                <img src="images/5_rafting_rio_atuel.webp" alt="Rafting Rio Atuel" width="200">
+                <figcaption>Rafting Rio Atuel</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
